<resources>
    <string name="app_name">Quissteling</string>
    <string name="preference_file_key">com.bijgepast.quissteling_setting</string>
    <string name="usernameHint">Vul hier je username in</string>
    <string name="quisstelingLabel">De Quissteling</string>
    <string name="log_inButton">Log in</string>
    <string name="title_activity_leader_board">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_score_bord">score bord</string>
    <string name="title_myPrizes">Mijn prijzen</string>
    <string name="go_back"><![CDATA[<-]]></string>
    <string name="FillInCode">code</string>
    <string name="Info">I</string>
    <string name="score">Score</string>
    <string name="place">Plaats</string>
    <string name="username">Gebruikersnaam</string>
    <string name="popup_close">Sluiten</string>
    <string name="popup_codeinvoer">Voer de vraagcode in:</string>
    <string name="popup_submit">Invoeren</string>
    <string name="helpDescription">
        De Quissteling app geeft een digitale beleving door middel van een quiz. Om de aan de quiz mee te kunnen doen moet een minigame gespeeld worden. Op de kaart kunt u zien waar de minigames te vinden zijn.
        Na het afronden van een minigame ontvangt u een code. Als u de knop rechtsboven indrukt kunt u deze invullen en beginnen met quizvragen beantwoorden. (Per locatie kunt u één vraag per uur beantwoorden.)
        <br />
        <br />
        Heeft u een vraag goed beantwoord dan krijgt u hier een score voor toegekend. Uw totale score is ook bovenin de navigatiebalk te zien.
        Wanneer u wilt weten hoe u qua score ervoor staat ten opzichte van andere Quistelling gebruikers dan kunt u op de knop linksboven drukken om het leaderboard op te roepen.
        Hier vindt u tevens de prijzen die u eventueel al gewonnen heeft. Prijzen worden uitgereikt naar aanleiding van de scores aan het einde van de dag uitgereikt.
        Daarnaast heeft u ook een kleine kans om een prijs te winnen na het goed beantwoorden van een quizvraag.</string>
    <string name="close">sluiten</string>
    <string name="correctAnswerText">Je hebt de vraag goed!</string>
    <string name="correctAnswerScoreText">Je nieuwe score is: </string>
    <string name="wrongAnswerText">Helaas, je hebt de vraag niet goed!</string>
    <string name="wrongAnswerScoreText">Je score blijft: </string>
    <string name="prijs">Prijs</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="plaats_nodig">Plaats nodig</string>
    <string name="ok">oké</string>
    <string name="fastlaneticket">fastlaneticket</string>
    <string name="winPrize">U heeft een prijs gewonnen</string>
    <string name="detailviewdescriptie">Descriptie:</string>
    <string name="detailviewplaats_nodig">Plaats nodig:</string>
    <string name="detailprijs">Prijs</string>
    <string name="prize_keychain">Essteling Roodkapje Sleutelhanger</string>
    <string name="prize_keychain_description">Een sleutelhanger van Roodkapje uit het sprookje van Roodkapje.</string>
    <string name="prize_stuffedAnimal">Essteling Roodkapje Knuffel</string>
    <string name="pirze_stuffedAnimal_description">Een knuffel van Roodkapje uit het sprookje van Roodkapje.</string>
    <string name="prize_ticketDiscount">Essteling Ticket Korting Bon</string>
    <string name="prize_ticketDiscount_description">Een eenmalige korting bon op je volgende Efteling ticket.</string>
    <string name="prize_restaurantDiscount">Essteling Restaurant Korting Bon</string>
    <string name="prize_restaurantDiscount_description">Een eenmalige korting bon op je volgende bestelling bij een van onze restaurants.</string>
    <string name="prize_fastLane">Essteling fast lane pass</string>
    <string name="prize_fastlane_description">Krijg eenmalig voorang in een wachtrij bij een attractie naar keuze.</string>
    <string name="incorrect_code">incorrecte code</string>
    <string name="empty_username">Gebruikersnaam is leeg</string>

    //questions
    <string name="red_riding_hood">Roodkapje</string>

    <string name="red_riding_hood_question_hearcolor">Wat is de haarkleur van Roodkapje?</string>
    <string name="red_riding_hood_question_hearcolor_blond">Blond</string>
    <string name="red_riding_hood_question_hearcolor_black">Zwart</string>
    <string name="red_riding_hood_question_hearcolor_brown">Bruin</string>
    <string name="red_riding_hood_question_hearcolor_red">Rood</string>

    <string name="red_riding_hood_question_kidnapping">Roodkapje is wel eens uit het park ontvoerd, in welk jaar was dit voor het eerst gebeurd?</string>

    <string name="red_riding_hood_question_animal">Welk dier komt voor in het verhaal van Roodkapje?</string>
    <string name="red_riding_hood_question_animal_lion">Leeuw</string>
    <string name="red_riding_hood_question_animal_fox">Vos</string>
    <string name="red_riding_hood_question_animal_kangaroo">Kangoeroe</string>
    <string name="red_riding_hood_question_animal_wolf">Wolf</string>

    <string name="red_riding_hood_question_familymember">Welk familielid van Roodkapje komt in het verhaal voor?</string>
    <string name="red_riding_hood_question_familymember_grandpa">Haar opa</string>
    <string name="red_riding_hood_question_familymember_grandma">Haar oma</string>
    <string name="red_riding_hood_question_familymember_father">Haar vader</string>
    <string name="red_riding_hood_question_familymember_sister">Haar zus</string>
    
    <string name="red_riding_hood_question_otherLanguage">Wat is roodkapje in het Engels?</string>
    <string name="red_riding_hood_question_otherLanguage_first">Red cap</string>
    <string name="red_riding_hood_question_otherLanguage_second">Girl in red</string>
    <string name="red_riding_hood_question_otherLanguage_third">Red Riding Hood</string>
    <string name="red_riding_hood_question_otherLanguage_fourth">Red Hood</string>

    <string name="red_riding_hood_question_yearSinceInPark">Vanaf welk jaar is Roodkapje te vinden in de Essteling?</string>

    <string name="toast_code_not_correct">De lengte van de cijferreeks is niet correct</string>
    <string name="toast_location_already_used">U heeft deze locatie laats nog gebruikt</string>
    <string name="toast_wrong_code">"Dit is niet de juiste code"</string>

</resources>
